<?xml version="1.0"?>
<package>
  <name>mobile_robot_description</name>
  <version>0.0.1</version>
  <description>The mobile_robot_description package</description>

  <maintainer email="qboticslabs@gmail.com">Lentin</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>


</package>
